--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         document.getElementById("agent1").innerText=UserAgent
         return true;
       }
+      checkIsValidBrowser();
   </script>
 </html>
