--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <h1>Agent:</h1>
-    <div id="agent1">
+    <div id="agent1" style="font-size: 20px; word-break: break-all;">
        loading 
     </div>      
   </body>
