--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <html>
+  <head>
+    <meta
+    name="viewport"
+    content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+  </head>
   <body>
     <h1>Agent:</h1>
     <div id="agent1" style="font-size: 20px; word-break: break-all;">
